# ML_Modeling_Challenge

./: .gitignore  1.EDA.ipynb  1.Exploratory_Data_Analysis.ipynb  2.Competition_Model.ipynb  2.Model_Competition_and_Variable_Selection.ipynb  3.Model_Optimization_and_Model_Saving.ipynb  3.Optimizacion y guardado del model.ipynb  3.Optimizacion y guardado del modelo optuna.ipynb  4.Blind_Test_Data_Prediction.ipynb  4.Predict blind test data.ipynb  README.md  config.yaml  pyproject.toml
data/: predictions.csv
models/: catboost_optimized.joblib
src/: eda_functions.py  optimization_functions.py  train_functions.py
src/pipeline/modeling/: train_functions.py
