[project]
name = "ml-modeling-challenge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "scipy>=1.15.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.8.0",
    "plotly>=6.7.0",
    "nbformat>=5.10.4",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "pyyaml>=6.0.3",
    "optuna>=4.8.0",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "ruff>=0.15.10",
]
